--- a/contactpage/style.css
+++ b/contactpage/style.css
@@ -1,58 +1,91 @@
 
 
-/* 
-  @media screen and (min-device-width: 320px) and (max-device-width: 768px) {
+
+
+  @media screen and (min-device-width: 280px) and (max-device-width: 1279px) {
     body {
-        background-image: url('https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c3VjY3VsZW50c3xlbnwwfHwwfHw%3D&w=1000&q=80');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
+        background-image: url('https://cdn.wallpapersafari.com/43/44/UDP63b.jpg');
       }    
     h1 {text-align: center;}
   main {margin: auto;
         background-color: rgba(21, 22, 22, 0.5);
         color: white;
-        margin-top: 50pt;
+        margin-top: 30%;
         padding-left: 10pt;
     padding-top: 15pt;
     padding-bottom: 15pt;
 border: 5px double white;
 font-size: 15pt;
 font-family: sans-serif;} 
-} */
+}
 
  
-        @media screen and (min-width: 992px) {
+        @media screen and (min-width: 1280px) {
             body {
-                background-image: url('https://images.photowall.com/products/58102/succulent-joy-1.jpg?h=699&q=85');
+                background-image: url('https://cdn.wallpapersafari.com/43/44/UDP63b.jpg');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: 100% 100%;
               }
 
-            h1 {text-align: center;
-            font-size: 50pt;}
+            h1 {text-align: left;
+                border-bottom: 5pt solid rgb(9,38,49);
+            font-size: 75pt;
+            color: #D37366;
+       }
 
             main {margin: auto;
-                margin-top: 10%;
+                margin-top: 3%;
                 margin-left: 10%;
                 margin-right: 10%;
                 margin-bottom: 5%;
-                background-color: rgba(0, 0, 0, 0.7);
-                color: #fff;
+                background-color: rgba(240, 248, 248, 0.9);
+                color: black;
                 padding-left: 50pt;
                 padding-right: 50pt;
-                padding-bottom: 50pt;
-                border: 20px double white;
+                border: 20px double rgb(9,38,49);
             font-size: 25pt;}
 
             section 
             {display: grid;
-            grid-template-columns: 1fr 1fr;}
+            grid-template-columns: 1fr 1fr;
+        }
 
             .left {grid-template-columns: 1/2;
-            padding: 15%;}
+            padding: 10%;}
 
             .right {grid-template-columns: 2/3;
-                padding: 15%;}
+                padding: 10%;}
+
+                input { 
+                    background-color: white;
+                    width: 100%;
+                    padding: 12px 20px;
+                    margin: 8px 0;
+                     box-sizing: border-box;
+                  }
+
+                  textarea {
+                      width: 100%;
+                    height: 150px;
+                    padding: 12px 20px;
+                    box-sizing: border-box;
+                    border: 2px solid black;
+                    border-radius: 4px;
+                    background-color: #f8f8f8;
+                    resize: none;}
+               
+                button {
+                    background-color: white; 
+                    border: none;
+                    color: black;
+                    padding: 15px 32px;
+                    text-align: center;
+                    text-decoration: none;
+                    display: inline-block;
+                    font-size: 30px;
+                  }
+
+                  .howdid {text-align:center;
+                margin-top: -50pt;}          
         }
