--- a/aboutMe/styles.css
+++ b/aboutMe/styles.css
@@ -1,80 +1,75 @@
-@media screen and (min-width: 1280px) {
 body {
-    width: 100%;
-    height: 100%;
-    background-color: #4A7665;
-    display: grid;
+width: 100%;
+height: 100%;
+background-color: #4A7665;
+display: grid;
 margin: auto;
 grid-template-columns: 50% 50%;
 grid-template-areas:
 "header header"
 "article photo";
 font-family: "Garamond", times, serif;
-border: solid 30pt black;
+border: solid 5pt black;
 border-bottom: 0;}
 
 header {
 grid-area: header;
-padding-left: 10%;
-background-color: white;}
+background-color: white;
+padding-left: 20%;
+color: goldenrod;}
 
-h1 {color: goldenrod;
-font-size: 130pt;
-}
-
-article {grid-area: article;
-font-size: 22pt;
-margin-left: 20%;
-margin-top: 5%;
-margin-bottom: 20%;
-
-}
+article 
+{grid-area: article;
+padding-left: 2%;
+padding-top: 5%;}
 
 figure {
 grid-area: photo;
-margin: auto;} }
+margin: auto;}
+
+figure > img 
+{height: 100%; 
+width: 100%;}
 
 
-@media screen and (min-device-width: 280px) and (max-device-width: 1279px)  {
+@media screen and (min-device-width: 100px) and (max-device-width: 980px)  {
 body 
 {display: grid;
-    grid-template-rows: 10%, 60%, 30%;
-   grid-template-areas:
-    "header"
-    "article"
-    "photo"; 
-    background-color: #4A7665;
-    display: grid;
+Margin: auto;
+grid-template-rows: 10%, 60%, 30%;
+grid-template-columns: 1fr;
+grid-template-areas:
+"header"
+"photo"
+"article"; 
+background-color: #4A7665;
+display: grid;
 margin: auto;
 font-family: "Garamond", times, serif;
 border: solid 5pt black;
 border-bottom: 0;}
 
 header {
-    grid-area: header;
-}
-    
-    h1 {color: goldenrod;
-    font-size: 30pt;
-    text-align: center;
-    background-color: white;
-    padding-top: auto;}
-    
-    article {grid-area: article;
-    font-size: 8pt;
-   margin: auto;
-   text-align: center;
-    
-    }
+grid-area: header;}
 
-    figure {grid-area: photo;}
-    
-   figure > img {
+h1 {color: goldenrod;
+font-size: 30pt;
+text-align: center;
+background-color: white;
+padding-top: auto;}
+
+article 
+{grid-area: article;
+font-size: 8pt;
+margin: auto;
+text-align: center;}
+
+figure {grid-area: photo;
     margin: auto;
-height: 100%;
-width: 100%;}
- 
+}
 
-
-
+figure > img {
+margin: auto;
+height: 50%;
+width: 50%;}
 }
